--- a/src/app/component/view/hospedagem/hospedagem-form/hospedagem-form.component.css
+++ b/src/app/component/view/hospedagem/hospedagem-form/hospedagem-form.component.css
@@ -1,14 +1,15 @@
-form {
+form{
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.msg-error {
+.msg-error{
     background-color: red;
     color: white;
 }
 
-.msg-success {
+.msg-success{
     background-color: green;
     color: white;
 }
