--- a/src/app/component/view/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/component/view/hotel/hotel-list/hotel-list.component.html
@@ -1,3 +1,56 @@
-<p>hotel-list works!</p>
+<mat-card class="example-card mat-elevation-z3">
+  <button
+    mat-button
+    color="primary"
+    class="button_new"
+    routerLink="/hoteis/form"
+  >
+    Novo Hotel
+  </button>
+  <mat-card-header>
+    <mat-card-title>Hoteis</mat-card-title>
+    <mat-card-subtitle>Lista de Hoteis Cadastrados</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <table mat-table [dataSource]="hoteis" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>#ID</th>
+        <td mat-cell *matCellDef="let hotel">{{ hotel.idHotel }}</td>
+      </ng-container>
 
-<button mat-button color="primary" routerLink="/hoteis/form">Novo Hotel</button>
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>Nome do Hotel</th>
+        <td mat-cell *matCellDef="let hotel">{{ hotel.nmHotel }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="endereco">
+        <th mat-header-cell *matHeaderCellDef>Endereço</th>
+        <td mat-cell *matCellDef="let hotel">{{ hotel.endereco }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="estrelas">
+        <th mat-header-cell *matHeaderCellDef>Quantidade de Estrelas</th>
+        <td mat-cell *matCellDef="let hotel">{{ hotel.qtdEstrelas }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="acao">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let hotel">
+          <a routerLink="/hoteis/{{ hotel.idHotel }}" class="edit">
+            <button mat-raised-button color="primary">
+              <i class="material-icons">edit</i>
+            </button>
+          </a>
+          <a>
+            <button mat-raised-button color="warn" (click)="excluir(hotel)">
+              <i class="material-icons">delete</i>
+            </button>
+          </a>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </mat-card-content>
+</mat-card>
